--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ Django==4.1.2
 django-cors-headers==3.13.0
 idna==3.4
 psycopg2==2.9.5
+pytz==2022.6
 requests==2.28.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
